<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfileFragment">

    <RelativeLayout
        android:id="@+id/user_profile_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/user_profile_circular_drawable">

        <TextView
            android:id="@+id/user_logo_first_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64sp"
            android:text="@string/user_prof_text_placeholder"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/user_jane_name_placeholder"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_container" />

    <TextView
        android:id="@+id/user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/user_age_placeholder"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="51dp"
        android:textColor="@color/white"
        android:text="@string/btn_go_back"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/go_back_button_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_age" />


</androidx.constraintlayout.widget.ConstraintLayout>