<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/user_profile"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/user_profile_circular_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/list_item_profile_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/user_prof_text_placeholder"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/user_profile"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="8dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/list_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/list_item_name_placeholder"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/user_birthday_placeholder"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="6dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>